Fixed Mailto: link and header spacing

--- a/src/styles/loader.css
+++ b/src/styles/loader.css
@@ -10,5 +10,5 @@
   font-size: 1.6em;
   color: whitesmoke;
   cursor: pointer;
-  padding-top: 0.2em;
+  padding-top: 0.1em;
 }
